--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -142,13 +142,14 @@ jobs:
       run: |
         LATEST_VERSION=$(ls -1 /opt/intel/oneapi/compiler/ | grep -v latest | sort | tail -1)
         source /opt/intel/oneapi/compiler/"$LATEST_VERSION"/env/vars.sh
-        which conda conda-build python ifort
+        which conda conda-build python ifort icc
 
+      # `-c defaults -c psi4/label/dev` -or- `-c conda-forge` for QCElemental dep
     - name: Conda-Build for Linux
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
       run: |
-        conda build conda/recipe -c defaults --output-folder .
+        conda build conda/recipe -c defaults -c psi4/label/dev --output-folder .
         ls -l linux-64/
         anaconda upload --label gha --skip linux-64/*.tar.bz2
 
