--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -215,7 +215,7 @@ jobs:
 
     - name: "OneAPI: install"
       if: (steps.cache-install-f.outputs.cache-hit != 'true') || (steps.cache-install-c.outputs.cache-hit != 'true')
-      run: devtools/oneapi-ci/install_macos.sh $MACOS_HPCKIT_URL $MACOS_FORTRAN_COMPONENTS,$MACOS_CPP_COMPONENTS
+      run: devtools/oneapi-ci/install_macos.sh $MACOS_HPCKIT_URL '$MACOS_FORTRAN_COMPONENTS $MACOS_CPP_COMPONENTS'
 
 #    - name: "OneAPI C: install"
 #      if: steps.cache-install-c.outputs.cache-hit != 'true'
