--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -32,14 +32,14 @@ requirements:
 #    - dftd4
     - intel-openmp                                          # [not osx]
     - llvm-openmp                                           # [osx]
-    - mkl-devel
+    - mkl-devel # [not osx]
     - pip
     - python 3.9
   run:
     - cffi
-    - numpy
+    - numpy # [not osx]
     - python 3.9
-#    - toml >=0.10.1
+    - toml >=0.10.1  # [not osx]
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
 #    - intel-openmp
 #    - {{ pin_compatible('mkl', upper_bound='2021.0') }}
@@ -47,7 +47,7 @@ requirements:
 test:
   requires:
     - pytest
-#    - qcelemental >=0.19.0
+    - qcelemental >=0.19.0 # [not osx]
   commands:
   imports:
     - dftd4
