--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -49,9 +49,9 @@ jobs:
 
     - name: "OneAPI: install"
 #      if: (steps.cache-install-f.outputs.cache-hit != 'true') || (steps.cache-install-c.outputs.cache-hit != 'true')
-      run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_CPP_COMPONENTS
+      run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_FORTRAN_COMPONENTS:$WINDOWS_CPP_COMPONENTS
+      #run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_FORTRAN_COMPONENTS
       #run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL
-      #run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_FORTRAN_COMPONENTS:$WINDOWS_CPP_COMPONENTS
       #run: devtools/oneapi-ci/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_FORTRAN_COMPONENTS,$WINDOWS_CPP_COMPONENTS
 
     - name: "OneAPI: exclude unused files from cache"
@@ -81,9 +81,8 @@ jobs:
         for /f "tokens=* usebackq" %%f in (`dir /b "C:\Program Files (x86)\Intel\oneAPI\compiler\" ^| findstr /V latest ^| sort`) do @set "LATEST_VERSION=%%f"
         echo %LATEST_VERSION%
         @call "C:\Program Files (x86)\Intel\oneAPI\compiler\%LATEST_VERSION%\env\vars.bat"
-        where icc
+        where icl
         where ifort
-        where icpc
 
     - name: Conda-Build for Windows
       env:
@@ -263,6 +262,8 @@ jobs:
       if: ${{ failure() }}
       run: |
         pwd
+        ls -l
+        echo $SRC_DIR
         cat $SRC_DIR/_build/meson-logs/meson-log.txt
 
     - name: Archive Conda Package
