--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -39,7 +39,7 @@ requirements:
     - cffi
     - numpy # [not osx]
     - python 3.9
-    - toml >=0.10.1  # [not osx]
+    - toml >=0.10.1
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
 #    - intel-openmp
 #    - {{ pin_compatible('mkl', upper_bound='2021.0') }}
