--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
 #    - dftd4
     - intel-openmp                                          # [not osx]
     - llvm-openmp                                           # [osx]
-    - mkl-devel # [not osx]
+    - mkl-devel
     - pip
     - python 3.9
   run:
