--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -20,6 +20,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
+    - {{ compiler('fortran') }}                            # [win]
 #    - {{ compiler('fortran') }}                            # [not win]
     - cffi
     - llvm-openmp                                           # [osx]
