--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -64,7 +64,7 @@ jobs:
         auto-activate-base: true
         conda-build-version: "*"
         show-channel-urls: true
-        channels: conda-forge
+        channels: conda-forge,defaults
 
     - name: Environment Information
       run: |
