forward win, mac 30

--- a/config/meson.build
+++ b/config/meson.build
@@ -15,6 +15,7 @@
 # along with dftd4.  If not, see <https://www.gnu.org/licenses/>.
 
 os = host_machine.system()
+message(os)
 
 if os == 'windows'
   add_project_link_arguments(
@@ -25,6 +26,8 @@ endif
 
 fc = meson.get_compiler('fortran')
 fc_id = fc.get_id()
+print(fc)
+print(fc_id)
 
 if fc_id == 'gcc'
   add_project_arguments(
