--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -40,10 +40,12 @@ requirements:
   run:
     - cffi
 #    - numpy # [not osx]
-    - numpy
+#    - numpy
+    - {{ pin_compatible('numpy') }}
     - python 3.9
     - toml >=0.10.1
-    - mkl-devel
+#    - mkl-devel
+    - {{ pin_compatible('mkl') }}
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
 #    - intel-openmp
 #    - {{ pin_compatible('mkl', upper_bound='2021.0') }}
@@ -51,8 +53,8 @@ requirements:
 test:
   requires:
     - pytest
-    #- qcelemental >=0.19.0 # [not osx]
-    - qcelemental >=0.19.0
+    - qcelemental >=0.19.0 # [not osx]
+    #- qcelemental >=0.19.0
   commands:
   imports:
     - dftd4
