--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -20,7 +20,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ compiler('fortran') }}                            # [not win]
+#    - {{ compiler('fortran') }}                            # [not win]
     - cffi
     - llvm-openmp                                           # [osx]
 #    - meson 0.55.*
@@ -30,6 +30,7 @@ requirements:
     - python 3.9
     - mkl-devel
   host:
+    - blas=*=mkl
     - cffi
 #    - dftd4
     - intel-openmp                                          # [not osx]
