--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -44,7 +44,7 @@ requirements:
 #    - numpy
     - {{ pin_compatible('numpy') }}
     - {{ pin_compatible('python') }}
-    - toml >=0.10.1
+    - toml >=0.10.1 [not osx]
 #    - mkl-devel
     - {{ pin_compatible('mkl') }}
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
