--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -46,7 +46,8 @@ requirements:
 #    - numpy
     #- {{ pin_compatible('numpy') }}
     #- {{ pin_compatible('python') }}
-    - toml >=0.10.1 [not osx]
+  #  - toml >=0.10.1 [not osx]
+    - toml
 #    - mkl-devel
     #- {{ pin_compatible('mkl') }}
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
