forward win, mac 41

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -45,7 +45,7 @@ requirements:
 #    - numpy # [not osx]
 #    - numpy
     #- {{ pin_compatible('numpy') }}
-    #- {{ pin_compatible('python') }}
+    - {{ pin_compatible('python') }}
   #  - toml >=0.10.1 [not osx]
     - toml
 #    - mkl-devel
