forward win, mac 43

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -56,9 +56,10 @@ requirements:
 
 test:
   requires:
-    - pytest  # [not osx]
-    - qcelemental >=0.19.0 # [not osx]
-    #- qcelemental >=0.19.0
+#    - pytest  # [not osx]
+#    - qcelemental >=0.19.0 # [not osx]
+    - pytest
+    - qcelemental >=0.19.0
   commands:
   imports:
     - dftd4
