forward win, mac 48

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -38,7 +38,7 @@ requirements:
     - pip
     - python
   run:
-    - blas=*=mkl
+    #- blas=*=mkl
     - numpy
     - cffi
     - {{ pin_compatible('python') }}
