--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -80,8 +80,8 @@ jobs:
         @call "C:\Program Files (x86)\Intel\oneAPI\compiler\%LATEST_VERSION%\env\vars.bat"
         where ifort
         where icl
-        ifort 2>&1
-        icl 2>&1
+        ifort 2>&1 || exit 0
+        icl 2>&1 || exit 0
 
 #conda build conda/recipe -c defaults -c psi4/label/dev --output-folder .
     - name: Conda-Build for Windows
@@ -195,6 +195,7 @@ jobs:
         retention-days: 1
 
     - name: Anaconda.org Upload for Linux
+      continue-on-error: true
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
       run: |
@@ -276,6 +277,7 @@ jobs:
         retention-days: 1
 
     - name: Anaconda.org Upload for Mac
+      continue-on-error: true
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
       run: |
