--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -43,11 +43,11 @@ requirements:
     - cffi
     - {{ pin_compatible('python') }}
     - toml
-#    - mkl-devel
+    - mkl-devel
     #- {{ pin_compatible('mkl') }}
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
 #    - intel-openmp
-    - {{ pin_compatible('mkl', upper_bound='2021.0') }}
+    #- {{ pin_compatible('mkl', upper_bound='2021.0') }}
 
 test:
   requires:
