--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - cffi
     #- llvm-openmp                                           # [osx]
 #    - meson 0.55.*
-    - meson >=0.55
+    - meson 0.57.1
     - ninja
 #    - pkg-config
     - python
@@ -49,10 +49,12 @@ requirements:
 #    - intel-openmp
     #- {{ pin_compatible('mkl', upper_bound='2021.0') }}
 
+# ok mac conda create -n qwer clang_osx-64 cffi python mkl-devel numpy ninja toml meson=0.57.1 pip pytest pydantic pint qcelemental -c defaults -c psi4/label/dev
+
 test:
   requires:
     - pytest
-    - qcelemental >=0.19.0
+    - qcelemental
   commands:
   imports:
     - dftd4
