--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -27,23 +27,23 @@ requirements:
     - ninja
 #    - pkg-config
     - python
-    - mkl-devel
+    - mkl-devel 2019
   host:
-    #- blas=*=mkl
+    - blas=*=mkl
     - cffi
     #- intel-openmp                                          # [not osx]
     #- llvm-openmp                                           # [osx]
     - intel-openmp
-    - mkl-devel
+    - mkl-devel 2019
     - pip
     - python
   run:
-    #- blas=*=mkl
+    - blas=*=mkl
     - numpy
     - cffi
     - {{ pin_compatible('python') }}
     - toml
-    - mkl-devel
+    - mkl-devel 2019
     #- {{ pin_compatible('mkl') }}
 #    - {{ pin_compatible('dftd4', max_pin='x.x') }}
 #    - intel-openmp
