--- a/.github/workflows/Conda.yml
+++ b/.github/workflows/Conda.yml
@@ -193,13 +193,11 @@ jobs:
           linux-64/*.tar.bz2
         retention-days: 1
 
-    - name: Anaconda.org Upload for Linux
+    - name: Upload Conda Package
       continue-on-error: true
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
-      run: |
-        ls -l linux-64/
-        anaconda upload --label gha --skip linux-64/*.tar.bz2
+      run: anaconda upload --label gha --skip linux-64/*.tar.bz2
 
 
   macos_intel:
@@ -259,7 +257,6 @@ jobs:
         icc --version
         icpc --version
 
-#run: conda build conda/recipe -c defaults -c psi4/label/dev -c conda-forge --output-folder .
     - name: Conda-Build for Mac
       run: conda build conda/recipe -c defaults -c psi4/label/dev --output-folder .
 
@@ -275,13 +272,11 @@ jobs:
           osx-64/*.tar.bz2
         retention-days: 1
 
-    - name: Anaconda.org Upload for Mac
+    - name: Upload Conda Package
       continue-on-error: true
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
-      run: |
-        ls -l osx-64/
-        anaconda upload --label gha --skip osx-64/*.tar.bz2
+      run: anaconda upload --label gha --skip osx-64/*.tar.bz2
 
 
 # more setup-miniconda options
